Corrected activeFilterTags alignment and added a counter to the list of all foods

--- a/packages/frontend/src/css/activeFilterTags.scss
+++ b/packages/frontend/src/css/activeFilterTags.scss
@@ -31,6 +31,8 @@
 
     .active-filter-content {
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
     }
 
